# autopattern

./: .gitignore  README.md  agent_handle_error.txt  agent_sig.txt  agent_step.txt  agent_step_method.txt  browser_dir.txt  codebase_analysis.md.resolved  project_recon_report.md.resolved  session_methods.txt  start.txt  upgrade_recommendations.md.resolved
.agent/: AGENTS.md  README.md
.agent/workflows/: add-feature.md  extension.md  fix-bug.md  release.md  setup.md
.github/workflows/: publish.yml
backend/: README.md  __init__.py  pyproject.toml
backend/automation/: .agent_memory.json  __init__.py  automation_runner.py  chat.py  cli.py  config.py  extraction_agent.py  key_manager.py  llm_client.py  main.py  memory.py  multi_agent_runner.py  orchestrator.py  server.py  task_manager.py  task_splitter.py
extension/src/background/: background.js
extension/src/ui/: dashboard.html  dashboard.js  settings.js
installer/: README.md  pyproject.toml
installer/src/autopattern_install/: __main__.py
website/: package-lock.json
website/src/components/: CTA.tsx  Footer.tsx  Hero.tsx  Navbar.tsx
