[project]
name = "autopattern"
version = "0.2.4"
description = "Record and automate browser workflows with AI. Chat-based CLI + API server powered by Gemini and browser-use."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Ganesh"},
    {name = "Charan"},
]
keywords = ["browser-automation", "ai", "gemini", "workflow", "rpa", "browser-use", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "browser-use>=0.11.0,<0.12.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.1.0",
    "google-generativeai>=0.8.0",
    "playwright>=1.48.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "websockets>=13.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/autopattern/autopattern"
Repository = "https://github.com/autopattern/autopattern"
"Bug Tracker" = "https://github.com/autopattern/autopattern/issues"

[project.scripts]
autopattern = "automation.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation"]

[tool.hatch.build.targets.sdist]
include = ["automation/", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
