[project]
name = "autopattern-install"
version = "0.1.3"
description = "Zero-friction installer for AutoPattern — AI-powered browser automation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ganesh" },
    { name = "Charan" },
]
keywords = ["autopattern", "installer", "browser-automation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

# Zero runtime dependencies — intentional.
# This package must be installable on any Python ≥ 3.8 without pulling in
# a dependency tree. It uses only stdlib + subprocesses.
dependencies = []

[project.urls]
Homepage = "https://github.com/autopattern/autopattern"
Repository = "https://github.com/autopattern/autopattern"
"Bug Tracker" = "https://github.com/autopattern/autopattern/issues"

[project.scripts]
autopattern-install = "autopattern_install.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autopattern_install"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]
